<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.mendirl</groupId>
        <artifactId>dependencies</artifactId>
        <version>0.0.1</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>dependencies-common</artifactId>

    <packaging>pom</packaging>

    <properties>
        <java.version>15</java.version>
        <resource.delimiter>@</resource.delimiter> <!-- delimiter that doesn't clash with Spring ${} placeholders -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>

        <!-- maven plugins -->
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
        <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-failsafe-plugin -->
        <maven-failsafe-plugin.version>3.0.0-M5</maven-failsafe-plugin.version>
        <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/flatten-maven-plugin -->
        <flatten-maven-plugin.version>1.2.5</flatten-maven-plugin.version>
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-resources-plugin -->
        <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-deploy-plugin -->
        <maven-deploy-plugin.version>3.0.0-M1</maven-deploy-plugin.version>
        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-release-plugin -->
        <maven-release-plugin.version>3.0.0-M1</maven-release-plugin.version>
        <!-- https://mvnrepository.com/artifact/org.sonarsource.scanner.maven/sonar-maven-plugin -->
        <sonar-maven-plugin.version>3.7.0.1746</sonar-maven-plugin.version>
        <!-- https://mvnrepository.com/artifact/org.apache.avro/avro-maven-plugin -->
        <avro-maven-plugin.plugin>1.10.0</avro-maven-plugin.plugin>
        <!-- https://mvnrepository.com/artifact/com.spotify/dockerfile-maven-plugin -->
        <dockerfile-maven-plugin.version>1.4.13</dockerfile-maven-plugin.version>
        <!-- https://mvnrepository.com/artifact/com.google.cloud.tools/jib-maven-plugin -->
        <jib-maven-plugin.version>2.6.0</jib-maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- https://mvnrepository.com/artifact/io.projectreactor/reactor-core -->
            <dependency>
                <groupId>io.projectreactor</groupId>
                <artifactId>reactor-core</artifactId>
                <version>3.3.10.RELEASE</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>1.2.3</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.junit/junit-bom -->
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.7.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>3.17.2</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <!-- https://maven.apache.org/plugins/maven-compiler-plugin/ -->
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <compilerArgs>--enable-preview</compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <!-- https://maven.apache.org/surefire/maven-surefire-plugin/ -->
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <!-- https://maven.apache.org/surefire/maven-failsafe-plugin/ -->
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <!-- https://docs.sonarqube.org/latest/analysis/scan/sonarscanner-for-maven/ -->
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>${sonar-maven-plugin.version}</version>
                </plugin>
                <plugin>
                    <!-- https://avro.apache.org/docs/current/gettingstartedjava.html -->
                    <groupId>org.apache.avro</groupId>
                    <artifactId>avro-maven-plugin</artifactId>
                    <version>${avro-maven-plugin.plugin}</version>
                    <executions>
                        <execution>
                            <phase>generate-sources</phase>
                            <goals>
                                <goal>schema</goal>
                            </goals>
                            <configuration>
                                <sourceDirectory>src/main/avro</sourceDirectory>
                                <outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
                                <stringType>String</stringType>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <!-- https://maven.apache.org/plugins/maven-deploy-plugin/ -->
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>${maven-deploy-plugin.version}</version>
                    <configuration>
                        <deployAtEnd>true</deployAtEnd>
                    </configuration>
                </plugin>
                <plugin>
                    <!-- https://www.mojohaus.org/flatten-maven-plugin/ -->
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                    <version>${flatten-maven-plugin.version}</version>
                    <configuration>
                        <updatePomFile>true</updatePomFile>
                        <flattenMode>resolveCiFriendliesOnly</flattenMode>
                    </configuration>
                    <executions>
                        <execution>
                            <id>flatten</id>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>flatten</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>flatten.clean</id>
                            <phase>clean</phase>
                            <goals>
                                <goal>clean</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <!-- https://maven.apache.org/plugins/maven-release-plugin/ -->
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>${maven-release-plugin.version}</version>
                    <configuration>
                        <releaseVersion>${revision}</releaseVersion>
                        <developmentVersion>${revision}</developmentVersion>
                    </configuration>
                </plugin>
                <plugin>
                    <!-- https://maven.apache.org/plugins/maven-resources-plugin/ -->
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven-resources-plugin.version}</version>
                    <!--                    <executions>-->
                    <!--                        <execution>-->
                    <!--                            <id>docker-resources</id>-->
                    <!--                            <phase>validate</phase>-->
                    <!--                            <goals>-->
                    <!--                                <goal>copy-resources</goal>-->
                    <!--                            </goals>-->
                    <!--                            <configuration>-->
                    <!--                                <outputDirectory>target/</outputDirectory>-->
                    <!--                                <resources>-->
                    <!--                                    <resource>-->
                    <!--                                        <directory>src/main/docker/</directory>-->
                    <!--                                        <filtering>false</filtering>-->
                    <!--                                        <excludes>-->
                    <!--                                            <exclude>**/*.yml</exclude>-->
                    <!--                                        </excludes>-->
                    <!--                                    </resource>-->
                    <!--                                </resources>-->
                    <!--                            </configuration>-->
                    <!--                        </execution>-->
                    <!--                    </executions>-->
                </plugin>
                <!--                <plugin>-->
                <!--                    &lt;!&ndash; https://github.com/spotify/dockerfile-maven &ndash;&gt;-->
                <!--                    <groupId>com.spotify</groupId>-->
                <!--                    <artifactId>dockerfile-maven-plugin</artifactId>-->
                <!--                    <version>${dockerfile-maven-plugin.version}</version>-->
                <!--                    <configuration>-->
                <!--                        <repository>${project.build.finalName}</repository>-->
                <!--                        <tag>latest</tag>-->
                <!--                        <contextDirectory>${project.build.directory}</contextDirectory>-->
                <!--                        <buildArgs>-->
                <!--                            <JAR_FILE>${project.build.finalName}-exec.jar</JAR_FILE>-->
                <!--                            <SPRING_OUTPUT_ANSI_ENABLED>ALWAYS</SPRING_OUTPUT_ANSI_ENABLED>-->
                <!--                            <APP_SLEEP>0</APP_SLEEP>-->
                <!--                        </buildArgs>-->
                <!--                    </configuration>-->
                <!--                    <executions>-->
                <!--                        <execution>-->
                <!--                            <id>default</id>-->
                <!--                            <goals>-->
                <!--                                <goal>build</goal>-->
                <!--                            </goals>-->
                <!--                        </execution>-->
                <!--                    </executions>-->
                <!--                </plugin>-->
                <!--                <plugin>-->
                <!--                    &lt;!&ndash; https://github.com/GoogleContainerTools/jib/tree/master/jib-maven-plugin &ndash;&gt;-->
                <!--                    <groupId>com.google.cloud.tools</groupId>-->
                <!--                    <artifactId>jib-maven-plugin</artifactId>-->
                <!--                    <version>${jib-maven-plugin.version}</version>-->
                <!--                    <configuration>-->
                <!--                        <from>-->
                <!--                            <image>adoptopenjdk:14-jdk-hotspot</image>-->
                <!--                        </from>-->
                <!--                        <to>-->
                <!--                            <image>${project.build.finalName}</image>-->
                <!--                            <tags>latest</tags>-->
                <!--                        </to>-->
                <!--                        <container>-->
                <!--                            <entrypoint>-->
                <!--                                <shell>bash</shell>-->
                <!--                                <option>-c</option>-->
                <!--                                <arg>/entrypoint.sh</arg>-->
                <!--                            </entrypoint>-->
                <!--                            <ports>-->
                <!--                                <port>8081</port>-->
                <!--                            </ports>-->
                <!--                            <environment>-->
                <!--                                <SPRING_OUTPUT_ANSI_ENABLED>ALWAYS</SPRING_OUTPUT_ANSI_ENABLED>-->
                <!--                                <JHIPSTER_SLEEP>0</JHIPSTER_SLEEP>-->
                <!--                            </environment>-->
                <!--                            <creationTime>USE_CURRENT_TIMESTAMP</creationTime>-->
                <!--                        </container>-->
                <!--                        <extraDirectories>-->
                <!--                            <paths>src/main/docker</paths>-->
                <!--                            <permissions>-->
                <!--                                <permission>-->
                <!--                                    <file>/entrypoint.sh</file>-->
                <!--                                    <mode>755</mode>-->
                <!--                                </permission>-->
                <!--                                <permission>-->
                <!--                                    <file>/app.conf</file>-->
                <!--                                    <mode>644</mode>-->
                <!--                                </permission>-->
                <!--                            </permissions>-->
                <!--                        </extraDirectories>-->
                <!--                    </configuration>-->
                <!--                    <executions>-->
                <!--                        <execution>-->
                <!--                            <phase>package</phase>-->
                <!--                            <goals>-->
                <!--                                <goal>build</goal>-->
                <!--                            </goals>-->
                <!--                        </execution>-->
                <!--                    </executions>-->
                <!--                </plugin>-->
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!--        <profile>-->
        <!--            <id>docker</id>-->
        <!--            <properties>-->
        <!--                <dockerfile.skip>false</dockerfile.skip>-->
        <!--                <spring-boot.repackage.skip>false</spring-boot.repackage.skip>-->
        <!--            </properties>-->
        <!--        </profile>-->
    </profiles>

</project>
